# uwheel

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  check.sh  justfile  rust-toolchain  rustfmt.toml  uwheel_demo.js  uwheel_demo_bg.wasm
benchmarks/decentralized/: Cargo.toml
benchmarks/encoding/: Cargo.toml
benchmarks/olap/: Cargo.toml  query_bench.sh  read_write_bench.sh  topn_bench.sh
benchmarks/olap/src/: lib.rs
benchmarks/uwheel_bench/: Cargo.toml  README.md  query_bench.sh  setup.sh  top_n_bench.sh
benchmarks/uwheel_bench/benches/: insert.rs
benchmarks/uwheel_bench/include/: FiBA.h
benchmarks/uwheel_bench/segment-tree/: Cargo.toml  LICENSE  README.md
benchmarks/uwheel_bench/segment-tree/src/: fenwick.rs  lib.rs  maybe_owned.rs  propagating.rs  segment_tree.rs
benchmarks/uwheel_bench/segment-tree/src/ops/: mod.rs  num.rs
benchmarks/uwheel_bench/src/: FiBA.cc  btreemap_wheel.rs  external_impls.rs  lib.rs  timestamp_generator.rs  tree.rs  util.rs
benchmarks/window/: Cargo.toml  README.md  build.rs  profile.json  query_bench.sh  top_n_bench.sh  window_bench.sh
benchmarks/window/benches/: insert.rs
benchmarks/window/include/: BulkAdapter.hpp  FiBA.h
benchmarks/window/src/: FiBA.cc  btreemap_wheel.rs  external_impls.rs  fiba_wheel.rs  lib.rs  timestamp_generator.rs  tree.rs  util.rs
benchmarks/window_bench/: Cargo.toml
benchmarks/window_bench/benches/: insert.rs
benchmarks/window_bench/src/: fiba_wheel.rs
crates/awheel/: Cargo.toml
crates/awheel-core/: Cargo.toml
crates/awheel-core/benches/: advance.rs  agg_wheel.rs  combine.rs  combine_range.rs  insert.rs  merge.rs  prefix.rs  queries.rs
crates/awheel-core/src/: delta.rs  lib.rs  stats.rs  time.rs  time_internal.rs
crates/awheel-core/src/aggregator/: mod.rs
crates/awheel-core/src/aggregator/all/: mod.rs
crates/awheel-core/src/aggregator/avg/: mod.rs
crates/awheel-core/src/aggregator/max/: mod.rs
crates/awheel-core/src/aggregator/min/: mod.rs
crates/awheel-core/src/aggregator/sum/: mod.rs
crates/awheel-core/src/aggregator/top_n/: entry.rs  key.rs  map.rs  mod.rs  order.rs  state.rs
crates/awheel-core/src/macros/: cfg.rs  mod.rs
crates/awheel-core/src/rw_wheel/: ext.rs  mod.rs  stats.rs
crates/awheel-core/src/rw_wheel/read/: hierarchical.rs  mod.rs  plan.rs  stats.rs
crates/awheel-core/src/rw_wheel/timer/: byte_wheel.rs  mod.rs  (+2 more)
crates/awheel-db/: Cargo.toml
crates/awheel-db/benches/: insert.rs
crates/awheel-db/examples/: hello.rs
crates/awheel-db/src/: lib.rs
crates/awheel-demo/: Cargo.toml  README.md  index.html
crates/awheel-demo/src/: app.rs  lib.rs  main.rs
crates/awheel-profiler/: Cargo.toml
crates/awheel-profiler/examples/: hello.rs
crates/awheel-profiler/src/: lib.rs
crates/awheel-stats/: Cargo.toml
crates/awheel-stats/benches/: benchmark.rs
crates/awheel-stats/src/: lib.rs
crates/awheel-tree/: Cargo.toml
crates/awheel-tree/src/: lib.rs  naive_tree.rs  read.rs  tree.rs  wheel_tree.rs
crates/awheel-window/: Cargo.toml
crates/awheel-window/src/: distributed.rs  eager.rs  lazy.rs  lib.rs  soe.rs  state.rs  stats.rs  util.rs  wheels.rs
crates/awheel-window/src/distributed/: mod.rs  stats.rs
crates/awheel/benches/: advance.rs  combine.rs  insert.rs  merge.rs  queries.rs
crates/awheel/examples/: serde.rs
crates/awheel/fuzz/: Cargo.toml
crates/awheel/fuzz/fuzz_targets/: all_aggregator.rs  sum_aggregator.rs
crates/awheel/src/: lib.rs
crates/haw/: Cargo.toml  README.md
crates/haw/benches/: advance.rs  insert.rs  merge.rs  queries.rs  serde.rs  window.rs
crates/haw/examples/: map_bench.rs  memory.rs  rw_tree_bench.rs  serde.rs  sum_aggregator.rs
crates/haw/fuzz/: Cargo.toml  README.md
crates/haw/fuzz/fuzz_targets/: all_aggregator.rs  sum_aggregator.rs
crates/haw/src/: inverse_wheel.rs  lib.rs  macros.rs  map.rs  sliding_wheel.rs  stats.rs  time.rs  waw.rs  wheel.rs
crates/haw/src/agg_wheel/: iter.rs  mod.rs
crates/haw/src/aggregator/: mod.rs
crates/haw/src/types/: mod.rs
crates/haw/src/wheels/: mod.rs  wheel.rs
crates/haw_demo/: Cargo.toml  README.md  index.html
crates/haw_demo/assets/: sw.js
crates/haw_demo/src/: app.rs  main.rs
crates/uwheel/: Cargo.toml
crates/uwheel-core/: Cargo.toml
crates/uwheel-core/benches/: combine.rs  combine_range.rs  merge.rs  prefix.rs
crates/uwheel-core/src/: delta.rs  lib.rs  time_internal.rs
crates/uwheel-core/src/aggregator/: mod.rs
crates/uwheel-core/src/macros/: cfg.rs
crates/uwheel-core/src/rw_wheel/: mod.rs
crates/uwheel-demo/: Cargo.toml  README.md  index.html
crates/uwheel-demo/assets/: manifest.json  sw.js
crates/uwheel-demo/src/: app.rs  main.rs  web.rs
crates/uwheel-query-tests/: Cargo.toml  fetch_data.sh
crates/uwheel-query-tests/src/: lib.rs  main.rs
crates/uwheel-stats/: Cargo.toml  README.md
crates/uwheel-stats/benches/: benchmark.rs
crates/uwheel-stats/src/: lib.rs
crates/uwheel-tree/: Cargo.toml
crates/uwheel-tree/src/: lib.rs
crates/uwheel-window/: Cargo.toml
crates/uwheel-window/src/: eager.rs  lazy.rs  lib.rs  soe.rs  state.rs  stats.rs  two_stacks.rs  util.rs  wheels.rs
crates/uwheel/benches/: advance.rs  bloom.rs  combine.rs  combine_range.rs  common.rs  group_by.rs  insert.rs  merge.rs  prefix.rs  queries.rs  roaring.rs
crates/uwheel/fuzz/: Cargo.toml
crates/uwheel/fuzz/fuzz_targets/: all_aggregator.rs  sum_aggregator.rs
crates/uwheel/src/: delta.rs  duration.rs  lib.rs  time_internal.rs
crates/uwheel/src/aggregator/: mod.rs
crates/uwheel/src/rw_wheel/: mod.rs  wheel_ext.rs
crates/uwheel/src/wheels/: mod.rs  stats.rs
crates/uwheel/src/window/: circular_queue.rs  hammer_slide.rs  mod.rs  state.rs  util.rs
crates/wheeldb/: Cargo.toml
crates/wheeldb/benches/: insert.rs
crates/wheeldb/examples/: hello.rs
crates/wheeldb/src/: connection.rs  db.rs  lib.rs
crates/wheeldb/src/lsm/: mod.rs  wheel.rs
crates/wheeldb/src/storage/: mod.rs
examples/compression/: Cargo.toml  README.md
examples/compression/src/: main.rs
(+170 files in other folders)
