[workspace]
resolver = "1"                         # resolver 1 needed for awheel-demo to work on web
members = ["crates/*", "benchmarks/*", "examples/*"]
exclude = ["benchmarks/results", "benchmarks/data"]


[workspace.package]
authors = ["Max Meldrum <max@meldrum.se>"]
edition = "2021"
categories = ["index", "temporal warehousing", "streaming", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.dependencies]
awheel = { path = "crates/awheel", version = "0.1.0", default-features = false }
awheel-core = { path = "crates/awheel-core", version = "0.1.0", default-features = false }
awheel-window = { path = "crates/awheel-window", version = "0.1.0" }
awheel-tree = { path = "crates/awheel-tree", version = "0.1.0" }
awheel-stats = { path = "crates/awheel-stats", version = "0.1.0" }

parking_lot = "0.12"
hashbrown = "0.13"
sketches-ddsketch = "0.2"
minstant = "0.1"
fastrand = "1.8.0"
rand = "0.8.5"
hdrhistogram = "7"
clap = { version = "3.2", features = ["derive"] }
criterion = "0.4"
duckdb = { version = "0.8.1", features = ["bundled"] }
serde = { version = "1.0", default-features = false }
serde-big-array = { version = "0.5.1", default-features = false }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
lz4_flex = { version = "0.11", default-features = false }
plotpy = "0.4.0"
