[workspace]
resolver = "1" # resolver 1 needed for uwheel-demo to work on web
members = ["crates/*", "examples/*"]
exclude = [
  "benchmarks/*",
  "crates/uwheel-demo",
  "crates/uwheel-tree",
  "crates/uwheel-window",
]


[workspace.package]
authors = ["Max Meldrum <max@meldrum.se>"]
edition = "2021"
categories = ["index", "temporal warehousing", "streaming", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.dependencies]
uwheel = { path = "crates/uwheel", version = "0.1.0" }
uwheel-core = { path = "crates/uwheel-core", version = "0.1.0", default-features = false }
uwheel-window = { path = "crates/uwheel-window", version = "0.1.0" }
uwheel-tree = { path = "crates/uwheel-tree", version = "0.1.0" }
uwheel-stats = { path = "crates/uwheel-stats", version = "0.1.0" }

parking_lot = "0.12"
hashbrown = "0.13"
sketches-ddsketch = "0.2"
minstant = "0.1"
fastrand = "1.8.0"
rand = "0.8.5"
hdrhistogram = "7"
clap = { version = "3.2", features = ["derive"] }
criterion = "0.4"
duckdb = { version = "0.10.0", features = ["bundled"] }
serde = { version = "1.0", default-features = false }
serde-big-array = { version = "0.5.1", default-features = false }
postcard = { version = "1.0.0", features = ["alloc"] }
lz4_flex = { version = "0.11", default-features = false }
smallvec = "1.11.2"
time = { version = "0.3.30", default-features = false }
pco = "0.1.3"
