[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]
exclude = ["crates/uwheel-tree", "examples/aggregator", "examples/sync"]

[workspace.package]
version = "0.2.1"
authors = ["Max Meldrum <max@meldrum.se>"]
edition = "2024"
repository = "https://github.com/uwheel/uwheel"
categories = ["data-structures", "embedded", "no-std", "wasm", "database"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.dependencies]
uwheel = { path = "crates/uwheel", version = "0.2.1" }
uwheel-tree = { path = "crates/uwheel-tree", version = "0.2.1" }
uwheel-stats = { path = "crates/uwheel-stats", version = "0.2.1" }

parking_lot = "0.12"
hashbrown = "0.14.3"
sketches-ddsketch = "0.2"
minstant = "0.1"
multiversion = { version = "0.7.3", default-features = false }
fastrand = "2.0.2"
rand = "0.8.5"
datafusion = "46.0.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
chrono = "0.4.40"
parquet = "54.0.0"
prettytable-rs = "0.10.0"
hdrhistogram = "7"
clap = { version = "4.5.4", features = ["derive"] }
criterion = "0.4"
serde = { version = "1.0", default-features = false }
serde-big-array = { version = "0.5.1", default-features = false }
postcard = { version = "1.0.0", features = ["alloc"] }
lz4_flex = { version = "0.11", default-features = false }
smallvec = "1.11.2"
time = { version = "0.3.30", default-features = false }
pco = "0.1.3"
bitpacking = "0.9.2"
bincode = "1.3.3"
proptest = "1.5.0"
