[package]
name = "olap"
version = "0.1.0"
edition.workspace = true

[features]
default = ["plot"]
plot = ["dep:plotpy"]

[dependencies]
duckdb.workspace = true
plotpy = { workspace = true, optional = true }
awheel = { workspace = true, features = ["tree", "sync", "stats", "top_n"] }
clap.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true

[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true