[package]
name = "olap"
version = "0.1.0"
edition.workspace = true

[features]
default = []

[dependencies]
duckdb.workspace = true
awheel = { workspace = true, features = ["tree", "sync", "simd", "stats"] }
clap.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true

[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true