[package]
name = "olap"
version = "0.1.0"
edition.workspace = true

[features]
default = ["duckdb_index"]
debug = []
duckdb_index = []
simd = ["awheel/simd"]

[dependencies]
duckdb.workspace = true
awheel = { workspace = true, features = ["tree", "sync", "stats"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
clap.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true
serde_json = "1.0.107"
serde.workspace = true

[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true
