[package]
name = "uwheel_bench"
version = "0.1.0"
edition.workspace = true

[features]
default = []
debug = []
sync = ["uwheel/sync"]
simd = ["uwheel/simd"]
profiler = ["uwheel/profiler"]
duckdb_index = []

[dependencies]
cxx = "1.0"
segment-tree = { path = "segment-tree", version = "2" }
duckdb.workspace = true
uwheel = { workspace = true, features = ["window", "top_n", "stats", "simd"] }
mimalloc = { version = "*", default-features = false, optional = true }
csv = "1.2.2"
chrono = "0.4"
clap.workspace = true
serde_json = "1.0.107"
serde.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
fastrand.workspace = true

[build-dependencies]
cxx-build = "1.0"

[[bench]]
name = "insert"
harness = false
