[package]
name = "window"
version = "0.1.0"
edition.workspace = true

[features]
default = ["plot"]
debug = []
plot = ["dep:plotpy"]

[dependencies]
cxx = "1.0"
awheel = { workspace = true, features = ["window", "stats"] }
plotpy = { workspace = true, optional = true }
csv = "1.2.2"
chrono = "0.4"
clap.workspace = true
serde.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
fastrand.workspace = true

[build-dependencies]
cxx-build = "1.0"


[[bench]]
name = "insert"
harness = false
