[package]
name = "window"
version = "0.1.0"
edition.workspace = true

[features]
default = ["duckdb_index"]
debug = []
sync = ["awheel/sync"]
simd = ["awheel/simd"]
hints = ["awheel/hints"]
profiler = ["awheel/profiler"]
duckdb_index = []

[dependencies]
cxx = "1.0"
duckdb.workspace = true
awheel = { workspace = true, features = ["window", "stats", "simd"] }
mimalloc = { version = "*", default-features = false, optional = true }
csv = "1.2.2"
chrono = "0.4"
pretty_assertions = "1.4.0"
clap.workspace = true
serde_json = "1.0.107"
serde.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
fastrand.workspace = true

[build-dependencies]
cxx-build = "1.0"


[[bench]]
name = "insert"
harness = false
