[package]
name = "window_bench"
version = "0.1.0"
edition.workspace = true

[features]
default = ["plot"]
debug = []
plot = ["dep:plotpy"]

[dependencies]
awheel = { workspace = true, features = ["window", "stats", "sync"] }
plotpy = { workspace = true, optional = true }
fiba_rs.workspace = true
clap.workspace = true
fastrand.workspace = true
hdrhistogram.workspace = true
minstant.workspace = true
sketches-ddsketch.workspace = true

[dev-dependencies]
rand.workspace = true
criterion.workspace = true
fastrand.workspace = true

[[bench]]
name = "insert"
harness = false
