[package]
name = "awheel-core"
version = "0.1.0"
categories.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "all", "avg", "sum", "min", "max"]
std = ["serde?/std"]
all = []
avg = []
sum = []
min = []
max = []
top_n = ["dep:hashbrown"]
serde = ["dep:serde", "dep:serde-big-array", "parking_lot?/serde", "hashbrown?/serde", "awheel-stats?/serde"]
sync = ["dep:parking_lot", "std"]
timer = []
profiler = ["dep:awheel-stats", "prettytable-rs", "std"]
pco = ["dep:pco", "std"]
simd = ["dep:arrow2", "std"]


[dependencies]
arrow2 = { version = "0.18.0", features = ["simd", "compute_aggregate"], optional = true }
pco = { version = "0.0.0-alpha.1", optional = true }
awheel-stats = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = [
    "derive",
    "rc",
] }
serde-big-array = { workspace = true, optional = true }
prettytable-rs = { version = "0.10.0", optional = true }