[package]
name = "awheel-core"
version = "0.1.0"
categories.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "all", "avg", "sum", "min", "max"]
std = ["serde?/std"]
all = []
avg = []
sum = []
min = []
max = []
top_n = ["dep:hashbrown"]
serde = ["dep:serde", "dep:serde-big-array", "parking_lot?/serde", "hashbrown?/serde", "awheel-stats?/serde"]
sync = ["dep:parking_lot", "std"]
timer = []
profiler = ["dep:awheel-stats", "prettytable-rs", "std"]
pco = ["dep:pco", "std"]
simd = ["dep:multiversion"]


[dependencies]
time = { version = "0.3.30", default-features = false, features = ["macros", "parsing"] }
multiversion = { version = "0.7.3", default-features = false, optional = true }
rayon = { version = "1.8.0", optional = true }
zerocopy = { version = "0.7.18", features = ["derive"] }
pco = { version = "0.0.0-alpha.1", optional = true }
awheel-stats = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = [
    "derive",
    "rc",
] }
serde-big-array = { workspace = true, optional = true }
prettytable-rs = { version = "0.10.0", optional = true }

[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "agg_wheel"
harness = false

[[bench]]
name = "combine"
harness = false

[[bench]]
name = "merge"
harness = false