[package]
name = "awheel-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.22.0", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
awheel = { workspace = true, features = ["serde"] }
fastrand.workspace = true
hdrhistogram.workspace = true
lz4_flex.workspace = true
postcard.workspace = true
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
time = { version = "0.3.17", default-features = false }
tracing = "0.1.37"
log = { version = "0.4", features = ["std"] }


# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
puffin = "0.16"
puffin_egui = "0.22.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.87"
web-sys = "0.3"
