[package]
name = "awheel-profiler"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awheel = { workspace = true, features = ["stats"] }
sketches-ddsketch.workspace = true
byteorder = { version = "1.0" }
cfg-if = "1.0"
once_cell = "1.0"
anyhow = { version = "1.0" }
minstant.workspace = true


[[example]]
name = "hello"
path = "examples/hello.rs"
