[package]
name = "awheel-window"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
stats = ["awheel-stats"]
serde = ["dep:serde", "awheel-stats?/serde", "awheel-core/serde"]

[dependencies]
awheel-core.workspace = true
awheel-stats = { workspace = true, optional = true }

serde = { workspace = true, optional = true, features = [
    "derive",
    "rc",
] }

[dev-dependencies]
awheel-core = { workspace = true, features = ["sum"] }
