[package]
name = "awheel"
version = "0.1.0"
categories = ["index", "temporal warehousing", "streaming", "no-std"]
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "all", "avg", "sum", "min", "max"]
std = ["awheel-core/std", "awheel-window?/std", "awheel-tree?/std"]
all = ["awheel-core/all"]
avg = ["awheel-core/avg"]
sum = ["awheel-core/sum"]
min = ["awheel-core/min"]
max = ["awheel-core/max"]
top_n = ["awheel-core/top_n"]
sync = ["awheel-core/sync", "awheel-tree?/sync"]
window = ["dep:awheel-window"]
tree = ["dep:awheel-tree"]
stats = ["std", "dep:awheel-stats", "awheel-window?/stats"]
serde = ["awheel-core/serde", "awheel-window?/serde"]
profiler = ["std", "awheel-core/profiler"]

[dependencies]
awheel-core = { workspace = true, default-features = false }
awheel-window = { workspace = true, optional = true }
awheel-tree = { workspace = true, optional = true }
awheel-stats = { workspace = true, optional = true }

[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "advance"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "merge"
harness = false