[package]
name = "haw"
version = "0.1.0"
edition = "2021"
categories = ["index", "temporal warehousing", "streaming", "no-std"]
authors = ["Max Meldrum <max@meldrum.se>"]
readme = "../../README.md"
license = "Apache-2.0 & MIT"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["years_size_10", "std"]
std = ["rkyv?/std"]
years_size_10 = []
years_size_100 = []
rkyv = ["dep:rkyv"]
top_k = ["dep:hashbrown"]
map = ["dep:hashbrown"]
stats = ["sketches-ddsketch", "minstant", "std"]

[dependencies]
smallvec = "1.10.0"
hashbrown = { version = "0.13", optional = true }
rkyv = { version = "0.7.39", features = ["copy", "copy_unsafe", "smallvec"], optional = true }

sketches-ddsketch = { version = "0.1", optional = true }
minstant = { version = "0.1", optional = true }


[dev-dependencies]
fastrand = "1.8.0"
rand = "0.8.5"
criterion = "0.4"
lz4_flex = { version = "0.11", default-features = false }
fiba_rs = { version = "0.1.0", path = "../fiba_rs"}
clap = { version = "3.2", features = ["derive"] }
zipf = "7.0.0"

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["rkyv", "std"]

[[example]]
name = "map_bench"
path = "examples/map_bench.rs"
required-features = ["map"]

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "advance"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["rkyv"]
