[package]
name = "haw"
version = "0.1.0"
categories = ["index", "temporal warehousing", "streaming", "no-std"]
authors = ["Max Meldrum <max@meldrum.se>"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "all", "avg", "sum", "min", "max", "window"]
std = ["rkyv?/std"]
window = []
all = []
avg = []
sum = []
min = []
max = []
top_k = ["dep:hashbrown"]
tree = ["dep:hashbrown"]
rkyv = ["dep:rkyv"]
stats = ["dep:sketches-ddsketch", "dep:minstant", "std"]
sync = ["dep:parking_lot", "std"]

[dependencies]
smallvec = "1.10.0"
parking_lot = { version = "0.12", optional = true }
hashbrown = { version = "0.13", optional = true }
rkyv = { version = "0.7.39", features = [
    "copy",
    "copy_unsafe",
    "smallvec",
], optional = true }

# Stats 
sketches-ddsketch = { workspace = true, optional = true }
minstant = { workspace = true, optional = true }


[dev-dependencies]
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true
fiba_rs.workspace = true
clap.workspace = true
lz4_flex = { version = "0.11", default-features = false }
zipf = "7.0.0"

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["rkyv", "std"]

[[example]]
name = "memory"
path = "examples/memory.rs"

[[example]]
name = "rw_tree_bench"
path = "examples/rw_tree_bench.rs"
required-features = ["tree"]

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "advance"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["rkyv"]
