[package]
name = "haw_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.21.0", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "dark-light",
] }
haw = { path = "../haw" }
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
time = { version = "0.3.17", default-features = false }
tracing = "0.1.37"
fastrand = "1.8.0"
hdrhistogram = "7.5.2"
# For wasm32
instant = "0.1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
puffin = "0.15"
puffin_egui = "0.21.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
