[package]
name = "uwheel-demo"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
uwheel = { workspace = true, features = ["serde"] }
egui_plot = "0.27.2"
egui_extras = { version = "0.27.2", features = [
    "default",
    "image",
    "datepicker",
] }
image = { version = "0.24", default-features = false, features = ["png"] }
fastrand = { workspace = true, features = ["js"] }
hdrhistogram.workspace = true
lz4_flex.workspace = true
postcard.workspace = true
time = { version = "0.3.17", default-features = false }
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
