[package]
name = "uwheel-stats"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
description = "profiling utility for uwheel"

[features]
serde = ["dep:serde", "sketches-ddsketch/use_serde"]

[dependencies]
sketches-ddsketch.workspace = true
minstant.workspace = true

serde = { workspace = true, optional = true, features = ["derive", "rc"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmark"
harness = false
