[package]
name = "uwheel-window"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
stats = ["uwheel-stats"]

[dependencies]
uwheel-core.workspace = true
uwheel-stats = { workspace = true, optional = true }

[dev-dependencies]
uwheel-core = { workspace = true, features = ["sum"] }
