[package]
name = "uwheel"
version.workspace = true
categories.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Embeddable Aggregate Management System for Streams and Queries"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "all", "avg", "sum", "min", "max", "min_max"]
std = ["serde?/std", "roaring?/std", "fastbloom?/std"]
all = []
avg = []
sum = []
min = []
max = []
min_max = []
top_n = ["dep:hashbrown"]
simd = ["dep:multiversion"]
sync = ["dep:parking_lot", "std"]
serde = [
  "dep:serde",
  "dep:serde-big-array",
  "parking_lot?/serde",
  "hashbrown?/serde",
  "uwheel-stats?/serde",
  "roaring?/serde",
  "fastbloom?/serde",
]
profiler = ["dep:uwheel-stats", "prettytable-rs", "std"]
timer = []
roaring = ["dep:roaring"]
bloom = ["dep:fastbloom"]

[dependencies]
time = { workspace = true, default-features = false }

# Optional
multiversion = { workspace = true, optional = true }
uwheel-stats = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
serde-big-array = { workspace = true, optional = true }
prettytable-rs = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
roaring = { workspace = true, optional = true }
fastbloom = { workspace = true, optional = true }

[dev-dependencies]
time = { workspace = true, default-features = false, features = [
  "macros",
  "parsing",
] }
fastrand.workspace = true
rand.workspace = true
criterion.workspace = true
pco.workspace = true
bitpacking.workspace = true
bincode.workspace = true
proptest.workspace = true


[[bench]]
name = "advance"
harness = false

[[bench]]
name = "combine"
harness = false

[[bench]]
name = "combine_range"
harness = false

[[bench]]
name = "group_by"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "prefix"
harness = false

[[bench]]
name = "roaring"
harness = false

[[bench]]
name = "bloom"
harness = false
