[package]
name = "wheeldb"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = []
sync = ["awheel/sync", "std"]
avg = ["awheel/avg"]
max = ["awheel/max"]
min = ["awheel/min"]
sum = ["awheel/sum"]
all = ["awheel/all"]
top_n = ["awheel/top_n"]
timer = ["awheel/timer"]
serde = ["awheel/serde"]
sqlite = ["dep:sqlite", "awheel/serde", "postcard", "lz4_flex", "std"]

[dependencies]
awheel = { workspace = true, default-features = false, features = ["sum"] }

sqlite = { version = "0.31.1", features = ["bundled"], optional = true }
postcard = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }

# for no_std later
# sqlite3-sys = { version = "0.15.2", features = ["bundled"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "insert"
harness = false

[[example]]
name = "hello"
required-features = ["timer"]
