[package]
name = "segment-tree"
version = "2.0.0"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Quickly perform interval queries or modifications."
repository = "https://github.com/Darksonn/segment-tree"
readme = "README.md"
keywords = ["segment", "sum", "query", "interval", "fenwick"]
categories = ["data-structures", "algorithms"]
license = "MIT"
edition = "2018"

[dependencies]
num-bigint = { version = "~0.2.0", optional = true }

[dev-dependencies]
rand = "0.6"

[package.metadata.docs.rs]
features = ["num-bigint"]
